--- a/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/PitchPerfect/Base.lproj/Main.storyboard
@@ -84,10 +84,10 @@
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="126.5625"/>
         </scene>
-        <!--Play Sounds View Controler View Controller-->
+        <!--Play Sounds View Controller View Controller-->
         <scene sceneID="CzH-Lq-tpj">
             <objects>
-                <viewController id="mua-ar-ioA" customClass="PlaySoundsViewControlerViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="mua-ar-ioA" customClass="PlaySoundsViewControllerViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tDN-j2-gvA">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
